--- a/.github/workflows/power-playwright.yml
+++ b/.github/workflows/power-playwright.yml
@@ -61,8 +61,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: ${{ success() && (github.event_name != 'workflow_dispatch' || inputs.runTestJob) }}
+    strategy:
+      fail-fast: false
+      matrix:
+        environment:
+          - new-look
+          - old-look
+        include:
+          - environment: new-look
+            secret: TEST_ENVIRONMENT_NEWLOOK_URL
+          - environment: old-look
+            secret: TEST_ENVIRONMENT_OLDLOOK_URL
     concurrency: 
-      group: test
+      group: test-${{ matrix.environment }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -84,15 +95,16 @@ jobs:
         id: runTests
         run: dotnet test tests/PowerPlaywright.IntegrationTests/PowerPlaywright.IntegrationTests.csproj -c Release --logger console --logger html --results-directory TestResults --collect:"XPlat code coverage" --no-build -- NUnit.NumberOfTestWorkers=${{ vars.TEST_NUMBEROFTESTWORKERS }} Playwright.LaunchOptions.Headless=true
         env:
-          KEYVAULT__URL: ${{ secrets.TEST_KEYVAULT_URL}}
-          KEYVAULT__TENANTID: ${{ secrets.TEST_KEYVAULT_TENANTID}}
-          KEYVAULT__CLIENTID: ${{ secrets.TEST_KEYVAULT_CLIENTID}} 
-          KEYVAULT__CLIENTSECRET: ${{ secrets.TEST_KEYVAULT_CLIENTSECRET}} 
+          POWERPLAYWRIGHT__TEST__URL:  ${{ secrets[matrix.secret] }}
+          POWERPLAYWRIGHT__TEST__KEYVAULT__URL: ${{ secrets.TEST_KEYVAULT_URL}}
+          POWERPLAYWRIGHT__TEST__KEYVAULT__TENANTID: ${{ secrets.TEST_KEYVAULT_TENANTID}}
+          POWERPLAYWRIGHT__TEST__KEYVAULT__CLIENTID: ${{ secrets.TEST_KEYVAULT_CLIENTID}} 
+          POWERPLAYWRIGHT__TEST__KEYVAULT__CLIENTSECRET: ${{ secrets.TEST_KEYVAULT_CLIENTSECRET}} 
         if: ${{ always() }}
       - name: Upload integration test results
         uses: actions/upload-artifact@v4
         with:
-          name: integration-test-results
+          name: integration-test-results-${{ matrix.environment }}
           path: TestResults
         if: ${{ always() }}
       - name: Login to Azure
@@ -105,7 +117,7 @@ jobs:
         if: ${{ failure() && steps.azureLogin.conclusion == 'success' }}
         uses: azure/CLI@v2
         with:
-          inlineScript: az storage blob upload-batch --account-name '${{ secrets.AZURE_STORAGE_ACCOUNTNAME }}' --auth-mode login -d 'playwright-traces' -s 'tests/PowerPlaywright.IntegrationTests/bin/Release/net8.0/playwright-traces' --destination-path '${{ github.workflow }}/${{ github.run_number }}_${{ github.run_attempt }}' 
+          inlineScript: az storage blob upload-batch --account-name '${{ secrets.AZURE_STORAGE_ACCOUNTNAME }}' --auth-mode login -d 'playwright-traces' -s 'tests/PowerPlaywright.IntegrationTests/bin/Release/net8.0/playwright-traces' --destination-path '${{ github.workflow }}/${{ github.run_number }}_${{ github.run_attempt }}_${{ matrix.name }}' --overwrite
       - name: Logout of Azure
         if: ${{ failure() && steps.azureLogin.conclusion == 'success' }}
         run: az logout
