--- a/src/PowerPlaywright.Strategies/PowerPlaywright.Strategies.csproj
+++ b/src/PowerPlaywright.Strategies/PowerPlaywright.Strategies.csproj
@@ -32,6 +32,10 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
     <PackageReference Include="Microsoft.Playwright" Version="1.49.0" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
